--- a/codesquare/src/main/resources/static/styles/planner/planner.css
+++ b/codesquare/src/main/resources/static/styles/planner/planner.css
@@ -11,6 +11,15 @@ main {
 	margin-right: 7%;
 	
 }
+#wrapper {
+	height:100%;
+}
+
+.container {
+  height: 100%; 
+  position: relative
+}
+
 
 .topMenubar {
 	background: white;
