--- a/codesquare/src/main/resources/static/styles/study/study.css
+++ b/codesquare/src/main/resources/static/styles/study/study.css
@@ -59,7 +59,7 @@
 	}
 	
 	.boardContent {
-		min-height: 400px; 
+	/* 	min-height: 400px;  */
    		 line-height: 1.75em;
 	}
 	.wantedContent {
@@ -98,7 +98,8 @@
 		width: 50%;
 	}
 	
-	#wantedContent-detail .group-detail {
+	#wantedContent-detail .group-detail,
+	#wantedContent-detail .seminar-detail {
 		text-align:left;
 	    display: inline-block;
 	    margin: 0 auto;
@@ -107,11 +108,6 @@
 	
 	.comment-div {
 		border-top: 1px solid r`ba(0,0,0,.125);
-	}
-	
-	.board-content {
-		padding: 50px 0px;
-	    margin-bottom: 20px;
 	}
 	
 	.groupContent {
@@ -147,8 +143,9 @@
 		grid-column: span 5;
 	}
 	
-	#group-ing-button, #bookmark-button, #group-creat-button, #group-skip-button,
-	#group-end-button, #group-in-button, #group-wait-button {
+	#bookmark-button, #group-creat-button, #group-skip-button,
+	#group-ing-button, #group-in-button, #group-wait-button,
+	#group-end-button, #group-close-button {
 	    /* display: block; */
 	   /*  width: 100%; */
 		margin-top: 10px;
@@ -158,6 +155,36 @@
 		text-align: center;
 		cursor: pointer;
 	}
+	
+	#group-ing-button, #group-close-button {
+		background: #4B0082;
+		color: white;
+	}
+	
+	#group-ing-button:hover, #group-close-button:hover {
+		background-color: #402058;
+		color: white;
+	}
+	
+	#group-end-button {
+	    background-color: #C0C0C0;
+	    border-color: #C0C0C0;
+	    color: white;
+	}
+	
+	#group-wait-button {
+	    background-color: #9d9baf;
+	    border-color: #9d9baf;
+	    color: #fefefe;
+	}
+
+	#group-wait-button:hover {
+		background-color: #7d6f95;
+		color: white;
+	}
+	
+
+	
 	#group-creat-button, #group-skip-button {
 		width: 80%;
 	    margin: 5px auto 5px auto;
@@ -177,10 +204,6 @@
 	    margin-right: 5px;
 	}
 	
-	#group-ing-button {
-		background: #4B0082;
-		color: white;
-	}
 
 	#bookmark-button {
 		position: relative;
@@ -193,33 +216,17 @@
 		border-color: #4B0082;
 	}
 	
+	#group-in-button, #group-end-button {
+		cursor : default;
+	}
+	
 	#bookmark-button:hover {
 		border-color: #4B0082;
 		color: #4B0082;
 	}
 	
 	
-	#group-end-button {
-	    background-color: #C0C0C0;
-	    border-color: #C0C0C0;
-	    color: white;
-	}
-	
-	#group-wait-button {
-	    background-color: #9d9baf;
-	    border-color: #9d9baf;
-	    color: #fefefe;
-	}
 
-	#group-wait-button:hover {
-		background-color: #7d6f95;
-		color: white;
-	}
-	
-	#group-ing-button:hover {
-		background-color: #402058;
-		color: white;
-	}
 	
 	.far.fa-heart, .fas.fa-heart {
 		font-size: 25px;;
@@ -552,6 +559,7 @@
  		grid-column-gap : repeat(2, 10px);
 		grid-row-gap: 11px; 
 		padding-left: 45px;
+	    margin-top: 5%;
 	}
 	
 	#modal-group-detail-Grid span {
@@ -564,7 +572,7 @@
 
 	
 	.boardDetail .board-content {
-	    height: -webkit-fill-available;
+	    height: auto;
 	}
 	
 	
