모집 게시글 조기 마감시 해당 게시판의 대기중인 신청 모두 거절로 바꾸고 거절메세지 작성 기능 추가

--- a/codesquare/src/main/resources/templates/study/studyWantedView.html
+++ b/codesquare/src/main/resources/templates/study/studyWantedView.html
@@ -246,7 +246,7 @@
 							</div>
 					    	<small>그룹의 현재 대기중인 신청은 모두 거절로 처리됩니다.</small>
 					    	<small>거절 메세지를 작성해 주세요.</small>
-					    	<input class="declineContent" type="text" name="declineContent" placeholder="거절 메세지">
+					    	<input id="declineContent" class="declineContent" type="text" name="declineContent" placeholder="거절 메세지">
 					        
 					        <button type="button" id="submitClose" class="btn btn-deepPurple shadow">
 								<span>모집 마감하기</span>
