--- a/codesquare/src/main/resources/templates/seminar/seminarWantedView.html
+++ b/codesquare/src/main/resources/templates/seminar/seminarWantedView.html
@@ -40,7 +40,7 @@
 							<div class="like">
 								좋아요
 								<i class="fa fa-heart" aria-hidden="true"></i>
-								<span th:text="*{likeCount}"></span>
+								<span id="likeCount" th:text="*{likeCount}"></span>
 							</div>
 							<div class="hit">
 								조회수
