--- a/codesquare/src/main/resources/templates/board/freeModify.html
+++ b/codesquare/src/main/resources/templates/board/freeModify.html
@@ -31,6 +31,9 @@ layout:decorator="layout/mainLayout2">
     color: #000;
     width: 165px;
 }
+a:link {
+text-decoration: none;
+}
 </style>
 </head>
 <body>
