--- a/codesquare/src/main/resources/templates/board/freeView.html
+++ b/codesquare/src/main/resources/templates/board/freeView.html
@@ -23,6 +23,9 @@ layout:decorator="layout/mainLayout2">
     border: 1px solid #ddd;
     text-decoration: none;
 }
+a:link {
+text-decoration: none;
+}
 </style>
 </head>
 <body>
