--- a/codesquare/src/main/resources/templates/board/freeWrite.html
+++ b/codesquare/src/main/resources/templates/board/freeWrite.html
@@ -32,6 +32,9 @@ layout:decorator="layout/mainLayout2">
     color: #000;
     width: 165px;
 }
+a:link {
+text-decoration: none;
+}
 #lectureImg-dropzone{
 	text-align: center;
 }
