--- a/codesquare/src/main/resources/templates/layout/plannerLayout.html
+++ b/codesquare/src/main/resources/templates/layout/plannerLayout.html
@@ -46,8 +46,7 @@
   <div class="container">
     <div class="row">
       <nav class="col-md-3 d-none d-md-block">
-        <div class="sidebar">
-          <br /> <br /> <br />
+        <div class="sidebar shadow">
           <ul class="nav flex-column">
             <li class="nav-item">
               <div class="profile px-2 text-center">
