--- a/codesquare/src/main/resources/templates/planner/ajax/userBookmarkList.html
+++ b/codesquare/src/main/resources/templates/planner/ajax/userBookmarkList.html
@@ -1,32 +1,34 @@
 <!-- 왼쪽 Nav tabs 부분 -->
 
-<ul class="nav nav-pills nav-custom-tabs flex-column col-md-2">
+<ul class="nav nav-pills nav-custom-tabs flex-column col-md-1">
     <li class="nav-item" th:each="category,index : ${bookmarkKind}">
         <a th:class="|nav-link${index.first?' active':''}|" data-toggle="pill" th:href="|#${category.category}|" th:text="${category.boardName}"></a>
     </li>
 </ul>
 <!-- 오른쪽 Tab Content 부분 -->
-<div id="bookmark-contentTab" class="tab-content custom-tab-content col-md-10">
+<div id="bookmark-contentTab" class="tab-content custom-tab-content col-md-11 shadow">
 	<div th:id="${category.category}" role="tablist" th:class="|container tab-pane ${index.first?'active':'fade'}|" th:each="category,index : ${bookmarkKind}">
 	    <div id="bookmark-accordion">
 	        <div class="card" th:each="list,status:${index.first?bookmarkList:bookmarkList.?[#strings.startsWith(boardKindId,'__${category.category}__')]}">
-	            <div class="card-header" th:id="|header_*{category.category}_*{list.id}|">
+	            <div class="card-header" th:id="|board_*{category.category}_*{list.boardId}|">
 	                <div class="mb-0 bookmarkGrid">
 	                    <a th:text="*{list.boardName}"></a>
-	                    <a th:text="*{list.title}"
-	                        th:class="*{status.first?'':'collapsed'}" data-toggle="collapse"
-	                        th:data-target="|#content_*{category.category}_*{list.id}|" aria-expanded="true"
-	                        th:aria-controls="|content_*{category.category}_*{list.id}|"></a>
-	                    <span class="status" th:text="*{list.status eq '0'?'마감':''}"></span>
+	                    <a th:text="${#strings.abbreviate(list.title,38)}" 
+	                        th:class="|title*{status.first?'':' collapsed'}|" data-toggle="collapse"
+	                        th:data-target="|#content_*{category.category}_*{list.boardId}|" aria-expanded="true"
+	                        th:aria-controls="|content_*{category.category}_*{list.boardId}|"></a>
+	                    <span class="status" th:text="*{list.status eq '0'?'종료':''}"></span>
 	                    <span class="writeDate" th:text="*{list.writeDateFormat}"></span>
-	                    <button th:id="|bmID_${list.id}|" class="fa fa-bookmark bk-icon" type="button"></button>
-	                    <button th:id="|${list.boardKindId}${list.boardId}|" class="fa fa-external-link" type="button" href="#"></button>
+	              		<i th:id="|bmID_${list.id}|" class="fas fa-heart checked" aria-hidden="true"></i>
 	                </div>
 	              </div>
-	              <div th:id="|content_*{category.category}_*{list.id}|"
+	              <div th:id="|content_*{category.category}_*{list.boardId}|"
 	                  th:class="|collapse${status.first?' show':''}|"
-	                  th:aria-labelledby="|header_*{category.category}_*{list.id}|" data-parent="#bookmark-contentTab">
-	                  <div class="card-body" th:text="*{list.content}"></div>
+	                  th:aria-labelledby="|board_*{category.category}_*{list.boardId}|" data-parent="#bookmark-contentTab">
+	                  <div class="card-body row" >
+						<div class="col-md-10 bookmark-content" th:utext="*{list.content}"></div>
+						<div class="col-md-2 btn-deepPurple shadow">바로가기</div>
+	                  </div>
 	              </div>
 	          </div>
 	      </div>
